fix(studies): fixed overflow issue of DDM upload on mobile screens.

--- a/mydigitalmeal/assets/scss/base/studies.scss
+++ b/mydigitalmeal/assets/scss/base/studies.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   align-content: center;
 
   .uploader-name {
@@ -26,8 +25,13 @@
 }
 
 .instruction-section {
-  max-width: 800px;
+  max-width: 100%;
   width: 100%;
+
+  @media (min-width: $bp-lg) {
+    max-width: 800px;
+  }
+
 }
 
 .instruction-section {
